--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
            height:100%;
            width: 100%;
            overflow:hidden;
-           overflow: scroll;
           }
 
         #fondo {
@@ -23,9 +22,9 @@
             height: 100%;
             position: relative;
             display: block;
-            overflow: scroll;
         }
         #container{
+	    background-color: #ec4836;
             width: 1280px;
             height: 720px;
             position: relative;
