--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         }
         #container{
 	    background-color: #ec4836;
-            width: 1280px;
-            height: 720px;
+            width: 100%;
+            height: 100%;
             position: relative;
             display: block;
             overflow: scroll;
