--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
            height:100%;
            width: 100%;
            overflow:hidden;
+	   margin: 0px; 
+           background-color: #ec4836;
           }
 
         #fondo {
