--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
           body {
            height:100%;
            width: 100%;
-           overflow:hidden;
-	   margin: 0px; 
+           margin: 0px; 
            background-color: #ec4836;
           }
 
@@ -24,17 +23,20 @@
             height: 100%;
             position: relative;
             display: block;
+           
         }
         #container{
-	    background-color: #ec4836;
-            width: 100%;
-            height: 100%;
+            background-color: #ec4836;
+            width: 1280px;
+            height: 720px;
             position: relative;
             display: block;
             overflow: scroll;
         }
         #fondo .sofa {
             background-color: #048eff;
+            width: 950px;
+            height: 70px;
             top: 395px; left: 273px;
             position: sticky;
             border-radius: 10px;
